test(Application): 통합 테스트 케이스 추가